Update SecurityBeansConfig.java